--- a/pom.xml
+++ b/pom.xml
@@ -4,7 +4,7 @@
 
     <groupId>ch.javacamp.metrics</groupId>
     <artifactId>module-metrics-plugin</artifactId>
-    <version>0.3.3-SNAPSHOT</version>
+    <version>0.3.3</version>
     <packaging>maven-plugin</packaging>
 
     <name>Module OOP Metrics Maven Plugin</name>
@@ -21,7 +21,7 @@
     </developers>
     <scm>
         <developerConnection>scm:git:git@github.com:UeliKurmann/java-totp.git</developerConnection>
-        <tag>module-metrics-plugin-0.3.0</tag>
+        <tag>module-metrics-plugin-0.3.3</tag>
         <url>https://github.com/UeliKurmann/java-totp</url>
     </scm>
 
